src/objects/WorkType.object
<CustomObject>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country_Code_full</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__Due_Date_Offset__c</fullName>
        <description>Minutes</description>
        <inlineHelpText>Calculates the Due Date by adding Minutes to the Service creation time, reflecting the organisation&apos;s internal SLA</inlineHelpText>
        <label>Due Date Offset</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Exact_Appointments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exact Appointments</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>All_WorkTypes</fullName>
        <columns>Name</columns>
        <columns>EstimatedDuration</columns>
        <columns>DurationType</columns>
        <columns>FSL__Exact_Appointments__c</columns>
        <columns>ShouldAutoCreateSvcAppt</columns>
        <filterScope>Everything</filterScope>
        <label>All Work Types</label>
    </listViews>
    <listViews>
        <fullName>My_WorkTypes</fullName>
        <filterScope>Mine</filterScope>
        <label>My Work Types</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>